--- a/webPage.css
+++ b/webPage.css
@@ -7,7 +7,7 @@ red: #ad343e
 Lightgrey: #bcabae
 */
 
-/* url(pcp_images/web4.jpg) */
+/* url(pcp_images/backgroundheader.jpg) */
 
 
 @font-face {
@@ -32,7 +32,7 @@ body {
   font-size: 40px;
   height: 800px;
   text-align: center;
-  background: #bcabae;
+  background: url(pcp_images/backgroundheader.jpg);
   background-repeat: repeat;
 }
 
