--- a/webPage.css
+++ b/webPage.css
@@ -22,7 +22,7 @@ Lightgrey: #bcabae
 
 body {
   font-family: 'Roboto';
-  padding: 20px;
+  /* padding: 20px; */
   background: white;
 }
 
@@ -62,7 +62,9 @@ p{
   color: black;
 }
 
-
+.row{
+  padding: 20px;
+}
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
