--- a/webPage.css
+++ b/webPage.css
@@ -7,7 +7,7 @@ red: #ad343e
 Lightgrey: #bcabae
 */
 
-/* url(pcp_images/backgroundheader.jpg) */
+/* url(pcp_images/web4.jpg) */
 
 
 @font-face {
@@ -22,21 +22,21 @@ Lightgrey: #bcabae
 
 body {
   font-family: 'Roboto';
-  /* padding: 20px; */
-  background: white;
+  padding: 20px;
+  background: #282e3a;
 }
 
 /* Header/Blog Title */
 .header {
   /* padding: 30px; */
   font-size: 40px;
-  height: 768px;
+  height: 800px;
   text-align: center;
-  background: url(pcp_images/backgroundheader.jpg);
+  background: #bcabae;
+  background-repeat: repeat;
 }
 
 h1{
-  top: 500px;
   color: white;
 }
 
@@ -62,9 +62,7 @@ p{
   color: black;
 }
 
-.row{
-  padding: 20px;
-}
+
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
@@ -90,8 +88,6 @@ p{
 /* Add a card effect for articles */
 .card {
   background-color: white;
-  stroke: #282e3a;
-  stroke-width: 2px;
   padding: 20px;
   margin-top: 20px;
 }
