--- a/webPage.css
+++ b/webPage.css
@@ -30,10 +30,9 @@ body {
 .header {
   /* padding: 30px; */
   font-size: 40px;
-  height: 800px;
+  height: 400px;
   text-align: center;
-  background: #bcabae;
-  background-repeat: repeat;
+  background: white;
 }
 
 h1{
