--- a/webPage.css
+++ b/webPage.css
@@ -33,10 +33,12 @@ body {
   height: 400px;
   text-align: center;
   background: white;
+  padding: 20px;
 }
 
 h1{
   color: #282e3a;
+  font-size: 40px;
 }
 
 h2{
