--- a/webPage.css
+++ b/webPage.css
@@ -37,13 +37,13 @@ body {
 }
 
 h1{
-  color: #2dcb74;
-  font-size: 30px;
+  color: #282e3a;
+  font-size: 40px;
 }
 
 h2{
-  color: black;
-  font-size: 30px;
+  color: #2dcb74;
+  font-size: 20px;
 }
 
 h3{
