--- a/webPage.css
+++ b/webPage.css
@@ -65,9 +65,8 @@ p{
 
 /* section 1: our project */
 #wheelchairImage{
-  background: url(pcp_images/web4.jpg);
+  background: url(pcp_images/wheelchair.jpg);
 }
-
 
 
 /* Create two unequal columns that floats next to each other */
