--- a/webPage.css
+++ b/webPage.css
@@ -71,7 +71,7 @@ p{
 /* section 1: our project */
 #wheelchairImage{
   background: url(pcp_images/wheelchair.jpg);
-  height: 800px;
+  background-size: 100% auto;
 }
 
 
