put ref in html tag instead

--- a/webPage.css
+++ b/webPage.css
@@ -64,16 +64,10 @@ p{
 }
 
 
-.img{
+/* .img{
   padding: 20px;
   background-size: cover;
-}
-
-/* section 1: our project */
-#wheelchairImage{
-  background: url(pcp_images/wheelchair.jpg);
-}
-
+} */
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
