--- a/webPage.css
+++ b/webPage.css
@@ -69,6 +69,10 @@ p{
   background-size: cover;
 } */
 
+#wheelcharImg{
+  background-image: url("pcp_images/wheelchair.jpg");
+}
+
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {
