--- a/webPage.css
+++ b/webPage.css
@@ -69,9 +69,9 @@ p{
   background-size: cover;
 } */
 
-#wheelchairImg{
+/* #wheelchairImg{
   background-image: url("pcp_images/wheelchair.jpg");
-}
+} */
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
