--- a/webPage.css
+++ b/webPage.css
@@ -99,6 +99,7 @@ p{
   background-color: white;
   padding: 20px;
   margin-top: 20px;
+  text-align: center;
 }
 
 /* Clear floats after the columns */
