--- a/webPage.css
+++ b/webPage.css
@@ -104,6 +104,7 @@ p2{
   background-color: white;
   padding: 20px;
   margin-top: 20px;
+  box-shadow: 10px 10px 5px grey;
 }
 
 /* Clear floats after the columns */
