--- a/webPage.css
+++ b/webPage.css
@@ -70,14 +70,6 @@ p{
 }
 
 
-/* .img{
-  padding: 20px;
-  background-size: cover;
-} */
-
-/* #wheelchairImg{
-  background-image: url("pcp_images/wheelchair.jpg");
-} */
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
@@ -93,12 +85,6 @@ p{
   padding-left: 20px;
 }
 
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
 
 /* Add a card effect for articles */
 .card {
@@ -106,6 +92,7 @@ p{
   padding: 20px;
   margin-top: 20px;
   box-shadow: 0px 0px 5px black;
+  height: 500px;
 }
 
 /* Clear floats after the columns */
