--- a/webPage.css
+++ b/webPage.css
@@ -85,7 +85,6 @@ p{
   padding-left: 20px;
 }
 
-
 /* Add a card effect for articles */
 .card {
   background-color: white;
@@ -103,12 +102,12 @@ p{
 }
 
 /* Footer */
-.footer {
+/* .footer {
   padding: 20px;
   text-align: center;
   background: #ddd;
   margin-top: 20px;
-}
+} */
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
