--- a/webPage.css
+++ b/webPage.css
@@ -73,14 +73,14 @@ p{
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {
-  float: left;
-  width: 60%;
+  /* float: left; */
+  width: 100%;
 }
 
 /* Right column */
 .rightcolumn {
-  float: left;
-  width: 40%;
+  /* float: left; */
+  width: 100%;
   padding-left: 20px;
 }
 
@@ -97,6 +97,7 @@ p{
   content: "";
   display: table;
   clear: both;
+  text-align: center;
 }
 
 /* Footer */
