--- a/webPage.css
+++ b/webPage.css
@@ -66,23 +66,24 @@ p{
 
 .p2{
   font-size: 10px;
-  line-height: 1.5;
+  line-height: 0.5;
 }
 
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {
-  /* float: left; */
-  width: 100%;
+  float: left;
+  width: 60%;
 }
 
 /* Right column */
 .rightcolumn {
-  /* float: left; */
-  width: 100%;
+  float: left;
+  width: 40%;
   padding-left: 20px;
 }
+
 
 /* Add a card effect for articles */
 .card {
@@ -97,16 +98,15 @@ p{
   content: "";
   display: table;
   clear: both;
-  text-align: center;
 }
 
 /* Footer */
-/* .footer {
+.footer {
   padding: 20px;
   text-align: center;
   background: #ddd;
   margin-top: 20px;
-} */
+}
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
