--- a/webPage.css
+++ b/webPage.css
@@ -23,7 +23,7 @@ Lightgrey: #bcabae
 body {
   font-family: 'Roboto';
   padding: 20px;
-  background: #282e3a;
+  background: white;
 }
 
 /* Header/Blog Title */
