--- a/webPage.css
+++ b/webPage.css
@@ -32,7 +32,7 @@ body {
   font-size: 40px;
   height: 400px;
   text-align: center;
-  background: url(pcp_images/wheelies.jpg);
+  /* background: url(pcp_images/wheelies.jpg); */
   padding: 20px;
 }
 
