--- a/webPage.css
+++ b/webPage.css
@@ -72,6 +72,11 @@ p{
 .title{
   font-size: 17px;
 }
+
+/* create indentation for certain paragraphs  */
+.tab { margin-left: 40px; }
+
+
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {
