--- a/webPage.css
+++ b/webPage.css
@@ -26,6 +26,15 @@ body {
   background: white;
 }
 
+
+#ear{
+  position: fixed;
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid blue;
+}
 /* Header/Blog Title */
 .header {
   /* padding: 30px; */
