--- a/webPage.css
+++ b/webPage.css
@@ -29,12 +29,11 @@ body {
 
 #ear{
   position: fixed;
-  width: 0;
-  height: 0;
-  border-left: 20px solid transparent;
-  border-right: 20px solid transparent;
-  border-top: 20px solid blue;
+  width: 100%;
+  height: 50px;
+  background-color: #bcabae;
 }
+
 /* Header/Blog Title */
 .header {
   /* padding: 30px; */
