--- a/webPage.css
+++ b/webPage.css
@@ -28,7 +28,7 @@ body {
 
 
 #backHeader{
-  position: fixed;
+  position: sticky;
   width: 100%;
   height: 50px;
   background: url(pcp_images/wheelies.jpg);
