--- a/webPage.css
+++ b/webPage.css
@@ -25,15 +25,14 @@ body {
   padding: 20px;
   background: white;
 }
-
-
+/*
 #backHeader{
-  position: sticky;
+  position: absolute;
   width: 100%;
-  height: 50px;
+  height: 200px;
   opacity: 0.5;
   background: url(pcp_images/wheelies.jpg);
-}
+} */
 
 /* Header/Blog Title */
 .header {
@@ -41,7 +40,7 @@ body {
   font-size: 40px;
   height: 400px;
   text-align: center;
-  /* background: url(pcp_images/wheelies.jpg); */
+  background: url(pcp_images/wheelies.jpg);
   padding: 20px;
 }
 
