--- a/webPage.css
+++ b/webPage.css
@@ -25,14 +25,7 @@ body {
   padding: 20px;
   background: white;
 }
-/*
-#backHeader{
-  position: absolute;
-  width: 100%;
-  height: 200px;
-  opacity: 0.5;
-  background: url(pcp_images/wheelies.jpg);
-} */
+
 
 /* Header/Blog Title */
 .header {
@@ -42,7 +35,7 @@ body {
   text-align: center;
   background: url(pcp_images/wheelies.jpg);
   padding: 20px;
-  opacity: 0.5;
+  /* opacity: 0.5; */
 }
 
 h1{
