--- a/webPage.css
+++ b/webPage.css
@@ -23,7 +23,7 @@ Lightgrey: #bcabae
 body {
   font-family: 'Roboto';
   padding: 20px;
-  background: url(pcp_images/wheelies.jpg);
+  background: url(pcp_images/background_fade.jpg);
   background-repeat: repeat;
 }
 
