--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -22,7 +22,7 @@ h1 {
 #container{
   width:100%;
   height:100%;
-  position: relative;
+  position: absolute;
   top: 200px;
   text-align: center;
   }
