--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -22,9 +22,10 @@ h1 {
 #container{
   width:100%;
   height:100%;
-  position: absolute;
+  position: relative;
   top: 200px;
   text-align: center;
+  z-index: 2;
   }
 
 /* left measure: time */
@@ -322,10 +323,11 @@ h1 {
 
 
 #map {
-    position: fixed;
+    position: relative;
+    z-index: 1;
     top: -400px;
     width: 100%;
-    height: 800px;
+    height: 1200px;
     background-color: grey;
     /* top:200px; */
 }
