--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -124,6 +124,7 @@ h1 {
 
 #textContainer{
   position: relative;
+  z-index: 3;
   display: inline-block;
   text-align: center;
 }
@@ -325,7 +326,6 @@ h1 {
 #map {
     position: relative;
     z-index: 1;
-    top: -400px;
     width: 100%;
     height: 1200px;
     background-color: grey;
