--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -195,6 +195,7 @@ h1 {
 /* OVERLAYING TEXTBOX */
 
     #textInput{
+      z-index: 4;
       width:100%;
       height:100%;
       position: relative;
