--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -255,9 +255,10 @@ h1 {
                       }
 
                       #overlay{
-                        position: fixed;
+                        position: relative;
+                        z-index: 5;
                         width: 200%;
-                        height: 2000px;
+                        height: 100%;
                         margin-top: -1000px;
                         margin-left: -200px;
                         background-color: white;
