--- a/WorkoutApp/static/css/summary.css
+++ b/WorkoutApp/static/css/summary.css
@@ -69,11 +69,12 @@ h1 {
 
 
         #container{
-          top: 230px;
           width:100%;
           height:100%;
           position: relative;
+          top: -300px;
           text-align: center;
+          z-index: 2;
           }
 
         /* left measure: time */
@@ -162,8 +163,10 @@ h1 {
 
         /* OVERLAYING TEXTBOX */
     #textInput{
+      z-index: 3;
       width:100%;
       height:100%;
+      top: -500px;
       position: relative;
       text-align: center;
       }
@@ -270,8 +273,10 @@ h1 {
 
 
     #map {
-        width: 100%;
-        height: 800px;
-        background-color: grey;
-        top:200px;
+      position: relative;
+      z-index: 1;
+      top: 100px;
+      width: 100%;
+      height: 1200px;
+      background-color: grey;
     }
